# T782-Apertus-Qualification-Task

./: CMakeLists.txt  Main.cpp  README.md
AVI/: AVIHeader.cpp  AVISizes.cpp  AVIStruct.h
ConvertImage/: ConversionHelper.cpp  ConversionHelper.h
